# xserver

./: meson.build
Xext/: panoramiXsrv.h  xacestr.h
Xext/namespace/: namespace.h
composite/: compwindow.c
dix/: dispatch.c  dispatch.h  property_priv.h  rpcbuf_priv.h  screen_hooks.c  screen_hooks_priv.h  tables.c  window.c
dri3/: dri3.c  dri3_request.c
glamor/: glamor.c  glamor_copy.c  glamor_dash.c  glamor_egl.c  glamor_glyphblt.c  glamor_lines.c  glamor_points.c  glamor_priv.h  glamor_program.c  glamor_program.h  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_text.c  meson.build
glamor/hdrext/: HDRProto.txt  applyvulkanproperties.c  applyvulkanproperties.h  hdrext.c  hdrext.h  hdrext_mkembed.c  hdrext_priv.h  hdrext_utils.c  hdrext_utils.h  hdrproto.h  hdrshaders.c  meson.build
glamor/hdrext/cglm/: README.md
glamor/hdrext/shaders/: bt2020-linear-to-crt-pq-fragment-shader-fp16.glsl  bt2020-linear-to-crt-pq-vertex-shader-fp16.glsl  bt2020-linearnorm-to-bt2020-linear-fragment-shader.glsl  bt2020-pq-to-bt2020-linear-fragment-shader.glsl  hdr_fragment_utils.glsl  sdr-fragment-shader-fp16.glsl  sdr-vertex-shader-fp16.glsl  sdr_fragment_utils.glsl
glamor/hdrext/tests/: .gdb_history  meson.build  test_applyvulkanproperties.c  test_hdrext.c
hw/xfree86/common/: xf86Config.c  xf86Init.c  xf86str.h
hw/xfree86/ddc/: edid.h  interpret_edid.c  xf86DDC.h
hw/xfree86/drivers/input/inputtest/: meson.build
hw/xfree86/drivers/video/: meson.build
hw/xfree86/drivers/video/amodesetting/: 10-amodesetting.conf  driver.c  drmmode_display.c  meson.build
hw/xfree86/drivers/video/modesetting/: driver.c  driver.h  drmmode_bo.c  drmmode_bo.h  drmmode_display.c  drmmode_display.h  meson.build
hw/xfree86/man/: xorg.conf.man
hw/xfree86/parser/: Screen.c  xf86Parser.h  xf86tokens.h
include/: colormap.h  dixstruct.h  edid.h  gcstruct.h  glamor.h  misc.h  picturestr.h  pixmapstr.h  scrnintstr.h  xf86DDC.h  xf86Parser.h  xf86str.h
mi/: miexpose.c
miext/: extinit_priv.h
miext/hdrext/: applyvulkanproperties.c  applyvulkanproperties.h  hdrext.c  hdrext.h  hdrext_priv.h  hdrpoto.xml  hdrproto.h  meson.build
miext/hdrext/tests/: meson.build  test_applyvulkanproperties.c
miext/rootless/: meson.build
test/: ddc-tests.c  meson.build  tests-common.c  tests.c  tests.h
